--- a/development/styles/_about.css
+++ b/development/styles/_about.css
@@ -16,6 +16,8 @@
             flex-shrink: 0;
         }
             .about__heading {
+                position: sticky;
+                top: 0;
                 margin-top: 0;
                 margin-bottom: 0;
                 padding-top: 60px;
