--- a/development/styles/_animation.css
+++ b/development/styles/_animation.css
@@ -13,6 +13,37 @@
     .animation--fade.animation--completed {
         opacity: 1;
         transform: translateY(0);
-        transition: opacity 1s ease,
-                    transform 1s ease;
+        transition: opacity 1400ms ease,
+                    transform 1400ms var(--ease-out-quint);
     }
+
+
+
+.animation--slide {
+
+}
+    .animation--slide.animation--ready {
+        opacity: 0;
+        transform: translateY(80px);
+    }
+
+    .animation--slide.animation--completed {
+        opacity: 1;
+        transform: translateY(0);
+        transition: opacity 1200ms ease,
+                    transform 1200ms var(--ease-out-quint);
+    }
+
+
+.animation--completed.animation--order-1 {
+    transition-delay: 0ms;
+}
+
+.animation--completed.animation--order-2 {
+    transition-delay: 100ms;
+}
+
+.animation--completed.animation--order-3 {
+    transition-delay: 200ms;
+}
+
