--- a/development/styles/_benefits.css
+++ b/development/styles/_benefits.css
@@ -20,7 +20,7 @@
             .benefits__tag {
                 border: none;
                 padding: 16px 41px;
-                background-color: var();
+                background-color: var(--alternative);
                 border-radius: 38px;
                 font-family: var(--font-headings);
                 font-weight: bold;
