--- a/development/styles/_header.css
+++ b/development/styles/_header.css
@@ -1,4 +1,30 @@
 .header {
+    display: flex;
+    align-items: flex-start;
     padding-top: 16px;
     padding-bottom: 16px;
 }
+    .header__emblem {
+
+    }
+
+    .header__nav {
+        margin-left: auto;
+        display: flex;
+        align-items: flex-start;
+    }
+        .header__link {
+            padding: 12px 18px;
+            border-radius: 24px;
+            font-size: 16px;
+            line-height: 24px;
+            text-transform: uppercase;
+            color: inherit;
+            text-decoration: none;
+            user-select: none;
+            transition: background-color var(--transition-hover);
+        }
+
+        .header__link:hover {
+            background-color: #F3F3F3;
+        }
