--- a/development/styles/_button.css
+++ b/development/styles/_button.css
@@ -55,3 +55,17 @@
     font-size: 20px;
     line-height: 26px;
 }
+
+
+.button--small {
+    padding: 12px 28px;
+    font-size: 18px;
+    line-height: 24px;
+}
+
+@media (max-width: 359px) {
+    .button--small {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
