--- a/development/styles/_header.css
+++ b/development/styles/_header.css
@@ -1,30 +1,76 @@
 .header {
-    display: flex;
-    align-items: flex-start;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    height: 80px;
 }
-    .header__emblem {
-
+    .header__fixed-bar {
+        position: fixed;
+        z-index: 1000;
+        left: 0;
+        top: 0;
+        right: 0;
+        background-color: #FFFFFF;
     }
+        .header__wrap {
+            display: flex;
+            align-items: flex-start;
+            padding-top: 16px;
+            padding-bottom: 16px;
+        }
+            .header__emblem {
+
+            }
+
+            .header__nav {
+                margin-left: auto;
+                display: flex;
+                align-items: flex-start;
+            }
+                .header__link {
+                    padding: 12px 18px;
+                    border-radius: 10px;
+                    font-size: 16px;
+                    line-height: 24px;
+                    text-transform: uppercase;
+                    color: inherit;
+                    text-decoration: none;
+                    user-select: none;
+                    transition: background-color var(--transition-hover);
+                }
+
+                .header__link:hover {
+                    background-color: #F3F3F3;
+                }
+
+            .header__contacts-handler {
+                display: none;
+            }
+                .header__book-string {
+
+                }
+
+
+@media (max-width: 1023px) {
 
     .header__nav {
-        margin-left: auto;
-        display: flex;
-        align-items: flex-start;
+        display: none;
     }
-        .header__link {
-            padding: 12px 18px;
-            border-radius: 24px;
-            font-size: 16px;
-            line-height: 24px;
-            text-transform: uppercase;
-            color: inherit;
-            text-decoration: none;
-            user-select: none;
-            transition: background-color var(--transition-hover);
-        }
 
-        .header__link:hover {
-            background-color: #F3F3F3;
+    .header__contacts-handler {
+        display: block;
+        margin-left: auto;
+    }
+        .header__book-string {
+
         }
+}
+
+@media (max-width: 599px) {
+    .header__contacts-handler:first-letter {
+        text-transform: uppercase;
+    }
+        .header__book-string {
+            display: none;
+        }
+}
+
+
+
