--- a/development/styles/_header.css
+++ b/development/styles/_header.css
@@ -9,6 +9,13 @@
         right: 0;
         background-color: #FFFFFF;
     }
+
+    @media (min-width: 1024px) and (max-height: 700px) {
+       .header__fixed-bar {
+           position: static;
+       }
+    }
+
         .header__wrap {
             display: flex;
             align-items: flex-start;
