how it works anchor and window close

--- a/development/styles/_window.css
+++ b/development/styles/_window.css
@@ -83,6 +83,7 @@
         }
 
         .window__close {
-            right: 24px !important;
+            right: 24px;
+            top: 24px;
         }
 }
