--- a/production/fonts/fonts.css
+++ b/production/fonts/fonts.css
@@ -3,6 +3,7 @@
 	src: url("jost-regular.woff");
 	font-weight: normal;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
 	src: url("jost-medium.woff");
 	font-weight: 500;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
 	src: url("jost-bold.woff");
 	font-weight: bold;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -24,4 +27,5 @@
 	src: url("evolventa-bold.woff");
 	font-weight: bold;
 	font-style: normal;
+	font-display: swap;
 }
