--- a/production/fonts/fonts.css
+++ b/production/fonts/fonts.css
@@ -1,35 +1,36 @@
 @font-face {
-	font-family: "Jost";
-	src: url("jost-regular.woff2") format("woff2"),
-	     url("jost-regular.woff") format("woff");
-	font-weight: normal;
-	font-style: normal;
-	font-display: swap;
+    font-display: swap;
+    font-family: "Jost";
+    font-weight: normal;
+    font-style: normal;
+    src: url("jost-v14-latin-regular.woff2") format("woff2"),
+         url("jost-v14-latin-regular.ttf") format("truetype");
 }
 
 @font-face {
-	font-family: "Jost";
-	src: url("jost-medium.woff2") format("woff2"),
-		 url("jost-medium.woff") format("woff");
-	font-weight: 500;
-	font-style: normal;
-	font-display: swap;
+    font-display: swap;
+    font-family: "Jost";
+    font-weight: 500;
+    font-style: normal;
+    src: url("jost-v14-latin-500.woff2") format("woff2"),
+         url("jost-v14-latin-500.ttf") format("truetype");
 }
 
 @font-face {
-	font-family: "Jost";
-	src: url("jost-bold.woff2") format("woff2"),
-		 url("jost-bold.woff") format("woff");
-	font-weight: bold;
-	font-style: normal;
-	font-display: swap;
+    font-display: swap;
+    font-family: "Jost";
+    font-weight: bold;
+    font-style: normal;
+    src: url("jost-v14-latin-700.woff2") format("woff2"),
+         url("jost-v14-latin-700.ttf") format("truetype");
 }
 
+
 @font-face {
-	font-family: "Evolventa";
+    font-display: swap;
+    font-family: "Evolventa";
 	src: url("evolventa-bold.woff2") format("woff2"),
-	     url("evolventa-bold.woff") format("woff");
+	     url("evolventa-bold.ttf") format("truetype");
 	font-weight: bold;
 	font-style: normal;
-	font-display: swap;
 }
