--- a/src/styles/_button.css
+++ b/src/styles/_button.css
@@ -1,4 +1,5 @@
 .button {
+    position: relative;
     display: inline-block;
     vertical-align: top;
     padding: 15px 48px;
@@ -50,7 +51,7 @@
 
 
 .button--submit {
-    padding: 12px 44px;
+    padding: 12px 24px;
     font-weight: 500;
     font-size: 20px;
     line-height: 26px;
@@ -69,3 +70,31 @@
         padding-right: 20px;
     }
 }
+
+
+@keyframes button-loading-spin {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.button--loading {
+    color: transparent;
+    pointer-events: none;
+}
+    .button--loading::after {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        display: block;
+        width: 24px;
+        height: 24px;
+        margin-top: -12px;
+        margin-left: -12px;
+        background-image: url("../vectors/button-loading.svg");
+        background-size: 24px 24px;
+        background-repeat: no-repeat;
+        background-position: center center;
+        animation: button-loading-spin 1s steps(12) infinite;
+    }
