--- a/src/styles/_catalog.css
+++ b/src/styles/_catalog.css
@@ -4,6 +4,15 @@
     background-color: #0A80BD;
     color: #FFFFFF;
 }
+
+/* For some reason macOS changes colors on video files, so they don't match with background
+   We should ideally fix video files: https://stackoverflow.com/questions/63686800/color-variations-in-video-html5
+   but for now let's just change few backgrounds on macOS
+ */
+.macos .catalog {
+    background-color: #0C8AC5;
+}
+
     .catalog__wrap {
 
     }
