--- a/src/styles/_basics.css
+++ b/src/styles/_basics.css
@@ -66,6 +66,14 @@
             background-color: #B6BEF2;
         }
 
+        /* For some reason macOS changes colors on video files, so they don't match with background
+           We should ideally fix video files: https://stackoverflow.com/questions/63686800/color-variations-in-video-html5
+           but for now let's just change few backgrounds on macOS
+         */
+        .macos .basics__tile--omnichanelling {
+            background-color: #BDC6F3;
+        }
+
         .basics__tile--user-data {
             grid-column: 1 / 3;
             grid-row: 5 / 6;
