--- a/src/styles/_hero.css
+++ b/src/styles/_hero.css
@@ -48,28 +48,31 @@
                 margin-top: 51px;
             }
 
+
     .hero__summary {
         min-height: 1341px;
         padding-top: 768px;
         padding-bottom: 123px;
-        background-image: image-set(
-            url('../images/hero-desktop-summary@2x.avif') type('image/avif') 2x,
-            url('../images/hero-desktop-summary.avif') type('image/avif') 2x,
-            url('../images/hero-desktop-summary@2x.webp') type('image/webp') 2x,
-            url('../images/hero-desktop-summary.webp') type('image/webp') 1x,
-            url('../images/hero-desktop-summary@2x.jpg') 2x,
-            url('../images/hero-desktop-summary.jpg') 1x
-        );
+        background-image: url("../images/hero-desktop-summary.jpg");
         background-size: 1864px 1341px;
         background-repeat: no-repeat;
         background-position: center top;
     }
 
-    /*@media (min-resolution: 2dppx) {*/
-    /*    .hero__summary {*/
-    /*        background-image: url("../images/hero-desktop-summary@2x.jpg");*/
-    /*    }*/
-    /*}*/
+    @media (min-resolution: 2dppx) {
+        .hero__summary {
+            background-image: url("../images/hero-desktop-summary@2x.jpg");
+        }
+    }
+
+    .hero__summary {
+        background-image: image-set(
+            url("../images/hero-desktop-summary@2x.webp") type("image/webp") 2x,
+            url("../images/hero-desktop-summary.webp") type("image/webp") 1x,
+            url("../images/hero-desktop-summary@2x.avif") type("image/avif") 2x,
+            url("../images/hero-desktop-summary.avif") type("image/avif") 1x
+        );
+    }
 
     /* картинка у нас мас 1864px */
     @media (min-width: 1864px) {
