--- a/src/styles/_feature.css
+++ b/src/styles/_feature.css
@@ -50,7 +50,7 @@
         top: 24px;
         width: 109px;
         height: 106px;
-        background-image: url("../images/feature-pointer.png");
+        background-image: url("../images/feature-pointer-desktop.png");
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center center;
@@ -58,10 +58,18 @@
 
     @media (min-resolution: 2dppx) {
         .feature--pointed::after {
-            background-image: url("../images/feature-pointer@2x.png");
+            background-image: url("../images/feature-pointer-desktop@2x.png");
         }
     }
 
+    .feature--pointed::after {
+        background-image: image-set(
+            url("../images/feature-pointer-desktop@2x.avif") type("image/avif") 2x,
+            url("../images/feature-pointer-desktop.avif") type("image/avif") 1x,
+            url("../images/feature-pointer-desktop@2x.webp") type("image/webp") 2x,
+            url("../images/feature-pointer-desktop.webp") type("image/webp") 1x
+        );
+    }
 
 
 @media (max-width: 599px) {
@@ -130,4 +138,14 @@
                 background-image: url("../images/feature-pointer-smartphone@2x.png");
             }
         }
+
+        .feature--pointed::after {
+            background-image: image-set(
+                url("../images/feature-pointer-smartphone@2x.avif") type("image/avif") 2x,
+                url("../images/feature-pointer-smartphone.avif") type("image/avif") 1x,
+                url("../images/feature-pointer-smartphone@2x.webp") type("image/webp") 2x,
+                url("../images/feature-pointer-smartphone.webp") type("image/webp") 1x
+            );
+        }
+
 }
