new aspect color

--- a/src/styles/_root.css
+++ b/src/styles/_root.css
@@ -7,7 +7,7 @@
     --base-line-height: 29px;
     --small-font-size: 16px;
     --small-line-height: 22px;
-    --background-accent: #0B80BD;
+    --background-accent: #0184EB;
     --alternative: #E7E7E7;
     --action: #0B80BD;
     --action-hover: #098BC5;
