--- a/src/styles/_button.css
+++ b/src/styles/_button.css
@@ -4,7 +4,7 @@
     vertical-align: top;
     padding: 15px 48px;
     border: none;
-    background-color: var(--action);
+    background-color: var(--accent);
     border-radius: 15px;
     font-family: inherit;
     font-weight: bold;
