--- a/src/styles/_contact.css
+++ b/src/styles/_contact.css
@@ -99,10 +99,10 @@
         margin-top: 28px;
     }
         .contact--in-modal .input__widget {
-            box-shadow: 0 0 0 1px var(--background-accent);
+            box-shadow: 0 0 0 1px var(--accent);
         }
         .contact--in-modal .input__widget:focus {
-            box-shadow: 0 0 0 2px var(--background-accent);
+            box-shadow: 0 0 0 2px var(--accent);
         }
 
 
