--- a/src/styles/_cta.css
+++ b/src/styles/_cta.css
@@ -1,6 +1,6 @@
 .cta {
     padding-top: 57px;
-    background-color: var(--background-accent);
+    background-color: var(--accent);
     color: #FFFFFF;
     text-align: center;
     overflow: hidden; /* Обрезаем скриншоты */
