--- a/src/styles/_numbers.css
+++ b/src/styles/_numbers.css
@@ -87,7 +87,7 @@
                 }
 
                 .numbers__progress--accent {
-                    background-color: var(--action);
+                    background-color: var(--accent);
                 }
 
 
