--- a/src/styles/_about.css
+++ b/src/styles/_about.css
@@ -78,7 +78,7 @@
                     /*margin-bottom: 0;*/
                     padding-top: 0;
                     padding-bottom: 0;
-                    color: var(--action);
+                    color: var(--accent);
                 }
 
             .about__body {
