--- a/src/styles/_basics.css
+++ b/src/styles/_basics.css
@@ -34,7 +34,7 @@
         .basics__tile--meaning {
             grid-column: 1 / 4;
             grid-row: 1 / 3;
-            background-color: var(--background-accent);
+            background-color: var(--accent);
             color: #FFFFFF;
         }
 
@@ -83,7 +83,7 @@
         .basics__tile--quoting {
             grid-column: 3 / 6;
             grid-row: 5 / 6;
-            background-color: var(--background-accent);
+            background-color: var(--accent);
             color: #FFFFFF;
         }
             .basics__sub-heading {
