--- a/src/styles/_input.css
+++ b/src/styles/_input.css
@@ -18,7 +18,7 @@
     }
 
     .input__widget:focus {
-        box-shadow: 0 0 0 2px var(--background-accent);
+        box-shadow: 0 0 0 2px var(--accent);
     }
 
     .input__widget:disabled {
