--- a/src/styles/_link.css
+++ b/src/styles/_link.css
@@ -12,7 +12,7 @@
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
-    color: var(--action);
+    color: var(--accent);
     text-decoration: none;
     cursor: pointer;
     transition: border-bottom-color var(--transition-hover);
