--- a/src/styles/_list.css
+++ b/src/styles/_list.css
@@ -18,7 +18,7 @@
             left: 2px;
             width: 12px;
             height: 12px;
-            background-color: var(--action);
+            background-color: var(--accent);
             border-radius: 50%;
         }
 
