--- a/src/styles/_plan.css
+++ b/src/styles/_plan.css
@@ -7,7 +7,7 @@
         font-weight: bold;
         font-size: 24px;
         line-height: 30px;
-        color: var(--action);
+        color: var(--accent);
     }
 
     .plan__price {
@@ -26,7 +26,7 @@
             margin-top: 9px;
             font-size: 10px;
             line-height: 30px;
-            color: var(--action);
+            color: var(--accent);
         }
 
     .plan__trial {
@@ -34,7 +34,7 @@
         font-weight: 500;
         font-size: 16px;
         line-height: 30px;
-        color: var(--action);
+        color: var(--accent);
     }
 
     .plan__note {
