--- a/src/styles/_root.css
+++ b/src/styles/_root.css
@@ -7,10 +7,9 @@
     --base-line-height: 29px;
     --small-font-size: 16px;
     --small-line-height: 22px;
-    --background-accent: #0184EB;
+    --accent: #0184EB;
+    --accent-hover: #098BC5;
     --alternative: #E7E7E7;
-    --action: #0B80BD;
-    --action-hover: #098BC5;
     --gray-1: #333333;
     --transition-hover: 0.1s ease;
     --max-text-width: 717px;
