--- a/src/styles/_tariffs.css
+++ b/src/styles/_tariffs.css
@@ -220,7 +220,7 @@
                                     font-weight: bold;
                                     font-size: 20px;
                                     line-height: 30px;
-                                    color: var(--action);
+                                    color: var(--accent);
                                 }
 
             .tariffs__section--body {
