rename font constant

--- a/src/styles/_about.css
+++ b/src/styles/_about.css
@@ -40,7 +40,7 @@
                 .about__sub-heading {
                     margin-top: 0;
                     margin-bottom: 0;
-                    font-family: var(--font-headings);
+                    font-family: var(--font-evolventa);
                     font-weight: bold;
                     font-size: 48px;
                     line-height: 76px;
