--- a/src/styles/_article.css
+++ b/src/styles/_article.css
@@ -6,7 +6,7 @@
         margin-top: 0;
         margin-bottom: 0;
         margin-right: 40px;
-        font-family: var(--font-headings);
+        font-family: var(--font-evolventa);
         font-weight: bold;
         font-size: 36px;
         line-height: 48px;
