--- a/src/styles/_benefits.css
+++ b/src/styles/_benefits.css
@@ -22,7 +22,7 @@
                 padding: 16px 41px;
                 background-color: var(--alternative);
                 border-radius: 38px;
-                font-family: var(--font-headings);
+                font-family: var(--font-evolventa);
                 font-weight: bold;
                 font-size: 30px;
                 line-height: 44px;
