--- a/src/styles/_footer.css
+++ b/src/styles/_footer.css
@@ -38,7 +38,7 @@
 
                     }
                         .footer__param {
-                            font-family: var(--font-headings);
+                            font-family: var(--font-evolventa);
                             font-weight: bold;
                             font-size: 32px;
                             line-height: 43px;
