--- a/src/styles/_now.css
+++ b/src/styles/_now.css
@@ -13,7 +13,7 @@
     }
         .now__heading {
             margin: 0 auto;
-            font-family: var(--font-headings);
+            font-family: var(--font-evolventa);
             font-weight: bold;
             font-size: 48px;
             line-height: 64px;
