--- a/src/styles/_basics.css
+++ b/src/styles/_basics.css
@@ -92,7 +92,7 @@
                 font-size: 36px;
                 line-height: 48px;
                 letter-spacing: -1px;
-                font-family: var(--font-headings);
+                font-family: var(--font-evolventa);
                 font-weight: bold;
             }
 
