--- a/src/styles/_body.css
+++ b/src/styles/_body.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    font-family: var(--font-text);
+    font-family: var(--font-jost);
     font-size: var(--base-font-size);
     line-height: var(--base-line-height);
     letter-spacing: 0.5px;
