--- a/src/styles/_contact.css
+++ b/src/styles/_contact.css
@@ -5,7 +5,7 @@
         display: block;
         margin-top: 0;
         margin-bottom: 0;
-        font-family: var(--font-headings);
+        font-family: var(--font-evolventa);
         font-weight: bold;
         font-size: 24px;
         line-height: 32px;
