--- a/src/styles/_tariffs.css
+++ b/src/styles/_tariffs.css
@@ -19,7 +19,7 @@
             }
                 .tariffs__cell {
                     padding: 15px var(--cell-horizontal-padding);
-                    font-family: var(--font-headings);
+                    font-family: var(--font-evolventa);
                     font-weight: bold;
                     font-size: 16px;
                     line-height: 24px;
@@ -27,7 +27,7 @@
                 }
 
                 .tariffs__cell:first-child {
-                    font-family: var(--font-text);
+                    font-family: var(--font-jost);
                     text-align: left;
                 }
 
@@ -38,14 +38,14 @@
 
                 .tariffs__cell--sub-heading,
                 .tariffs__cell--sub-heading:first-child {
-                    font-family: var(--font-headings);
+                    font-family: var(--font-evolventa);
                     font-weight: bold;
                     text-transform: uppercase;
                 }
 
                 .tariffs__cell--single-line-heading,
                 .tariffs__cell--single-line-heading:first-child {
-                    font-family: var(--font-headings);
+                    font-family: var(--font-evolventa);
                     font-weight: bold;
                     font-size: 20px;
                     text-transform: uppercase;
@@ -216,7 +216,7 @@
 
                             }
                                 .tariffs__section--mobile-head .tariffs__cell {
-                                    font-family: var(--font-headings);
+                                    font-family: var(--font-evolventa);
                                     font-weight: bold;
                                     font-size: 20px;
                                     line-height: 30px;
