--- a/src/styles/_title.css
+++ b/src/styles/_title.css
@@ -1,5 +1,5 @@
 .title {
-    font-family: var(--font-headings);
+    font-family: var(--font-evolventa);
     font-weight: bold;
     font-size: 48px;
     line-height: 76px;
