rename font constants

--- a/src/styles/_feature.css
+++ b/src/styles/_feature.css
@@ -5,7 +5,7 @@
     border: 1px solid currentColor;
     border-radius: 22px;
     padding: 8px 23px;
-    font-family: var(--font-evolventa);
+    font-family: var(--evolventa);
     font-weight: bold;
     font-size: 20px;
     line-height: 26px;
