--- a/src/styles/_badge.css
+++ b/src/styles/_badge.css
@@ -3,7 +3,7 @@
     vertical-align: top;
     padding: 5px 10px;
     border-radius: 13px;
-    font-family: var(--font-evolventa);
+    font-family: var(--evolventa);
     font-weight: bold;
     font-size: 12px;
     line-height: 16px;
