--- a/src/styles/_hero.css
+++ b/src/styles/_hero.css
@@ -19,7 +19,7 @@
 
         }
             .hero__pre-heading {
-                font-family: var(--font-evolventa);
+                font-family: var(--evolventa);
                 font-weight: bold;
                 font-size: 24px;
                 line-height: 26px;
@@ -28,7 +28,7 @@
             .hero__heading {
                 margin-top: 5px;
                 margin-bottom: 0;
-                font-family: var(--font-evolventa);
+                font-family: var(--evolventa);
                 font-weight: bold;
                 font-size: 56px;
                 line-height: 62px;
@@ -112,7 +112,7 @@
                     .hero__sub-heading {
                         margin-top: 0;
                         margin-bottom: 0;
-                        font-family: var(--font-evolventa);
+                        font-family: var(--evolventa);
                         font-weight: bold;
                         font-size: 24px;
                         line-height: 32px;
