--- a/src/styles/_plan.css
+++ b/src/styles/_plan.css
@@ -3,7 +3,7 @@
     text-align: center;
 }
     .plan__heading {
-        font-family: var(--font-evolventa);
+        font-family: var(--evolventa);
         font-weight: bold;
         font-size: 24px;
         line-height: 30px;
@@ -13,7 +13,7 @@
     .plan__price {
         position: relative;
         margin-top: 10px;
-        font-family: var(--font-evolventa);
+        font-family: var(--evolventa);
         font-weight: bold;
         font-size: 32px;
         line-height: 43px;
@@ -24,7 +24,7 @@
             right: 0;
             top: 100%;
             margin-top: 9px;
-            font-family: var(--font-jost);
+            font-family: var(--jost);
             font-weight: 500;
             font-size: 10px;
             line-height: 30px;
@@ -33,7 +33,7 @@
 
     .plan__trial {
         margin-top: 50px;
-        font-family: var(--font-jost);
+        font-family: var(--jost);
         font-weight: 500;
         font-size: 16px;
         line-height: 30px;
@@ -45,7 +45,7 @@
         max-width: 240px;
         margin-left: auto;
         margin-right: auto;
-        font-family: var(--font-jost);
+        font-family: var(--jost);
         font-weight: normal;
         font-size: 16px;
         line-height: 23px;
