--- a/src/styles/_root.css
+++ b/src/styles/_root.css
@@ -1,7 +1,7 @@
 /* stylelint-disable declaration-colon-space-after */
 :root {
-    --font-jost: "Jost", sans-serif;
-    --font-evolventa: "Evolventa", sans-serif;
+    --jost: "Jost", sans-serif;
+    --evolventa: "Evolventa", sans-serif;
     --container-padding: 40px;
     --base-font-size: 20px;
     --base-line-height: 29px;
