--- a/src/styles/_truth.css
+++ b/src/styles/_truth.css
@@ -6,11 +6,17 @@
     .truth__heading {
         margin-top: 0;
         margin-bottom: 0;
+        max-width: 400px;
+        margin-left: auto;
+        margin-right: auto;
         text-align: center;
     }
 
     .truth__description {
         margin-top: 10px;
+        max-width: 740px;
+        margin-left: auto;
+        margin-right: auto;
         font-weight: 500;
         font-size: 20px;
         line-height: 34px;
