--- a/src/styles/_sales.css
+++ b/src/styles/_sales.css
@@ -120,7 +120,10 @@
                     .sales__sub-heading {
                         /*margin-top: 0;*/
                         /*margin-bottom: 0;*/
-                        /*font-weight: bold;*/
+                        font-family: var(--evolventa);
+                        font-weight: bold;
+                        font-size: 16px;
+                        line-height: 23px;
                     }
 
                     .sales__features {
